--- a/Side Quests/Web Psychology/templates/base.html
+++ b/Side Quests/Web Psychology/templates/base.html
@@ -45,40 +45,40 @@
           Quiz App
         </div>
         <div class="list-group list-group-flush flex-grow-1">
-          <a
-            href="/"
-            class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center"
-          >
-            <i class="fas fa-home me-3"></i> Home
+          <a href="/" class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center">
+              <i class="fas fa-home me-3"></i> Home
           </a>
-          <a
-            href="/questions"
-            class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center"
-          >
-            <i class="fas fa-pencil-alt me-3"></i> Take Quiz
+          {% if session.get('role') == 'admin' %}
+          <a href="/admin" class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center">
+              <i class="fas fa-user-shield me-3"></i> Admin
           </a>
-          <a
-            href="/result"
-            class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center"
-          >
-            <i class="fas fa-chart-line me-3"></i> Results
+          {% endif %}
+          <a href="/questions" class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center">
+              <i class="fas fa-pencil-alt me-3"></i> Take Quiz
           </a>
-        </div>
+          <a href="/result" class="list-group-item list-group-item-action bg-dark text-white d-flex align-items-center">
+              <i class="fas fa-chart-line me-3"></i> Results
+          </a>
+      </div>
+      
 
         <div class="mt-auto p-3 text-center border-top">
           {% if session.get('logged_in') %}
-          <a href="/profile" class="text-white d-block mb-2"
-            ><i class="fas fa-user-circle me-2"></i>Profile</a
-          >
-          <a href="/logout" class="text-white d-block"
-            ><i class="fas fa-sign-out-alt me-2"></i>Logout</a
-          >
+              <div class="d-flex justify-content-center align-items-center">
+                  <a href="/profile" class="text-white me-3">
+                      <i class="fas fa-user-circle me-1"></i>Profile
+                  </a>
+                  <a href="/logout" class="text-white">
+                      <i class="fas fa-sign-out-alt me-1"></i>Logout
+                  </a>
+              </div>
           {% else %}
-          <a href="/login" class="text-white me-2">Login</a>
-          <span class="text-white">|</span>
-          <a href="/signup" class="text-white ms-2">Signup</a>
+              <a href="/login" class="text-white me-2">Login</a>
+              <span class="text-white">|</span>
+              <a href="/signup" class="text-white ms-2">Signup</a>
           {% endif %}
-        </div>
+      </div>
+      
       </div>
 
       <!-- Page Content -->
